// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsiblePanel should render default with expanded key/value content 1`] = `
<div
  className="panel panel-default theme-tc-collapsible-panel theme-default-panel theme-open panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <div
        className="theme-panel-header-content panel-header-content"
      >
        <button
          className="theme-panel-title btn btn-link"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          <div
            className="theme-panel-title"
          >
            <div
              className="theme-undefined theme-col-4"
            >
              <div
                className="theme-tc-status tc-status theme-action"
                role="status"
              >
                <span
                  className="theme-tc-status-icon tc-status-icon theme-info"
                >
                  <svg
                    aria-hidden="true"
                    className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-check"
                    focusable="false"
                    name="fa fa-check"
                  />
                </span>
                <span
                  className="theme-tc-status-label tc-status-label theme-info"
                >
                  inProgress
                </span>
                <div
                  className="tc-actions theme-tc-status-actions tc-status-actions btn-group"
                >
                  <button
                    aria-label="cancel"
                    className="btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    role={null}
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-cancel"
                      focusable="false"
                      name="fa fa-cancel"
                    />
                    <span>
                      cancel
                    </span>
                  </button>
                  <button
                    aria-label="delete"
                    className="btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    role={null}
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-delete"
                      focusable="false"
                      name="fa fa-delete"
                    />
                    <span>
                      delete
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="theme-undefined theme-col-4"
            >
              <button
                aria-describedby="42"
                aria-label="edit"
                className="theme-undefined btn-icon-only btn btn-link"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="link"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-edit"
                  focusable="false"
                  name="fa fa-edit"
                />
              </button>
            </div>
            <div
              className="theme-undefined theme-col-4"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                by Charles
              </div>
            </div>
            <div
              className="theme-group theme-col-4"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                on TDP
              </div>
              <span
                aria-describedby="42"
                className="theme-undefined label label-default"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                XML
              </span>
            </div>
          </div>
        </button>
        <button
          aria-describedby="42"
          aria-expanded={true}
          aria-label="Collapse panel"
          aria-pressed={true}
          className="theme-toggle toggle tc-icon-toggle theme-tc-icon-toggle theme-active active btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-EHOje iyUYnG tc-svg-icon flip-vertical tc-icon-name-talend-caret-down"
            focusable="false"
            name="talend-caret-down"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse in"
  >
    <div
      className="panel-body"
    >
      <dl
        className="theme-content"
      >
        <dt
          className="theme-label"
        >
          <span
            className="label label-default"
          >
            Content
          </span>
        </dt>
        <dd
          className="theme-description"
        >
          Description3
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render default with key/value content 1`] = `
<div
  className="panel panel-default theme-tc-collapsible-panel theme-default-panel panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <div
        className="theme-panel-header-content panel-header-content"
      >
        <button
          className="theme-panel-title btn btn-link"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          <div
            className="theme-panel-title"
          >
            <div
              className="theme-undefined theme-col-4"
            >
              <div
                className="theme-tc-status tc-status theme-action"
                role="status"
              >
                <span
                  className="theme-tc-status-icon tc-status-icon theme-info"
                >
                  <svg
                    aria-hidden="true"
                    className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-check"
                    focusable="false"
                    name="fa fa-check"
                  />
                </span>
                <span
                  className="theme-tc-status-label tc-status-label theme-info"
                >
                  inProgress
                </span>
                <div
                  className="tc-actions theme-tc-status-actions tc-status-actions btn-group"
                >
                  <button
                    aria-label="cancel"
                    className="btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    role={null}
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-cancel"
                      focusable="false"
                      name="fa fa-cancel"
                    />
                    <span>
                      cancel
                    </span>
                  </button>
                  <button
                    aria-label="delete"
                    className="btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    role={null}
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-delete"
                      focusable="false"
                      name="fa fa-delete"
                    />
                    <span>
                      delete
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="theme-undefined theme-col-4"
            >
              <button
                aria-describedby="42"
                aria-label="edit"
                className="theme-undefined btn-icon-only btn btn-link"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="link"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-edit"
                  focusable="false"
                  name="fa fa-edit"
                />
              </button>
            </div>
            <div
              className="theme-undefined theme-col-4"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                by Charles
              </div>
            </div>
            <div
              className="theme-group theme-col-4"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                on TDP
              </div>
              <span
                aria-describedby="42"
                className="theme-undefined label label-default"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                XML
              </span>
            </div>
          </div>
        </button>
        <button
          aria-describedby="42"
          aria-label="Expand panel"
          aria-pressed={false}
          className="theme-toggle toggle tc-icon-toggle theme-tc-icon-toggle btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-talend-caret-down"
            focusable="false"
            name="talend-caret-down"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      <dl
        className="theme-content"
      >
        <dt
          className="theme-label"
        >
          <span
            className="label label-default"
          >
            Content
          </span>
        </dt>
        <dd
          className="theme-description"
        >
          Description3
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render default without content 1`] = `
<div
  className="panel panel-default theme-tc-collapsible-panel theme-default-panel panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <div
        className="theme-panel-header-content panel-header-content"
      >
        <button
          className="theme-panel-title btn btn-link"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          <div
            className="theme-panel-title"
          >
            <div
              className="theme-undefined theme-col-4"
            >
              <div
                className="theme-tc-status tc-status theme-action"
                role="status"
              >
                <span
                  className="theme-tc-status-icon tc-status-icon theme-info"
                >
                  <svg
                    aria-hidden="true"
                    className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-check"
                    focusable="false"
                    name="fa fa-check"
                  />
                </span>
                <span
                  className="theme-tc-status-label tc-status-label theme-info"
                >
                  inProgress
                </span>
                <div
                  className="tc-actions theme-tc-status-actions tc-status-actions btn-group"
                >
                  <button
                    aria-label="cancel"
                    className="btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    role={null}
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-cancel"
                      focusable="false"
                      name="fa fa-cancel"
                    />
                    <span>
                      cancel
                    </span>
                  </button>
                  <button
                    aria-label="delete"
                    className="btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    role={null}
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-delete"
                      focusable="false"
                      name="fa fa-delete"
                    />
                    <span>
                      delete
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="theme-undefined theme-col-4"
            >
              <button
                aria-describedby="42"
                aria-label="edit"
                className="theme-undefined btn-icon-only btn btn-link"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseDown={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                role="link"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-fa fa-edit"
                  focusable="false"
                  name="fa fa-edit"
                />
              </button>
            </div>
            <div
              className="theme-undefined theme-col-4"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                by Charles
              </div>
            </div>
            <div
              className="theme-group theme-col-4"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                on TDP
              </div>
              <span
                aria-describedby="42"
                className="theme-undefined label label-default"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                XML
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    />
  </div>
</div>
`;

exports[`CollapsiblePanel should render panel with custom element 1`] = `
<div
  className="panel panel-default theme-tc-collapsible-panel theme-default-panel panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <div
        className="theme-panel-header-content panel-header-content"
      >
        <button
          className="theme-panel-title btn btn-link"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          <div
            className="theme-panel-title"
          >
            <div
              className="theme-undefined theme-col-3"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                Version 1 Version 1
              </div>
            </div>
            <div
              className="theme-undefined theme-col-3"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span>
                  Custom element
                </span>
              </div>
            </div>
            <div
              className="theme-undefined theme-col-3"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                03/02/2017 14:44:55
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    />
  </div>
</div>
`;

exports[`CollapsiblePanel should render themed with textual content 1`] = `
<div
  className="panel panel-default theme-tc-collapsible-panel theme-descriptive-panel panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <div
        className="theme-panel-header-content panel-header-content"
      >
        <button
          className="theme-panel-title btn btn-link"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          <div
            className="theme-panel-title"
          >
            <div
              className="theme-group theme-col-2"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                Version 1 Version 1
              </div>
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                (Read Only)
              </div>
            </div>
            <div
              className="theme-undefined theme-col-2"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                03/02/2017 14:44:55
              </div>
            </div>
          </div>
        </button>
        <button
          aria-describedby="42"
          aria-label="Expand panel"
          aria-pressed={false}
          className="theme-toggle toggle tc-icon-toggle theme-tc-icon-toggle btn btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="sc-EHOje iyUYnG tc-svg-icon tc-icon-name-talend-caret-down"
            focusable="false"
            name="talend-caret-down"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    >
      <div
        className="theme-content"
      >
        <div
          className="theme-head"
        >
          <span
            aria-describedby="42"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            21 step
          </span>
          <span
            aria-describedby="42"
            className="text-right"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            by Abdelaziz Maalej test 1 test 2 test 1 test 2
          </span>
        </div>
        <div
          className="theme-content-description content-description"
        >
          Lorem ipsum dolor sit amet, consectv eturelit Lorem  adipiscing elit.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
		 consectetur adipiscing elit Lorem ipsum dolor sit nsectetur adipiscing elit Lorem
		ipsum dolor sit amet, consectetur adipiscing elit Lorem dolor sit amet, consectetur
		 adipiscing elitipsum dolor sit amet, consectv eturelit Lorem  adipis decing elit.
		Lorem ipsum dolor sit amet, consectetur adipiscing elit Lorem ipsum dolor sit amet,
		 consectetur adipiscing elit Lorem ipsum dolor sit nsectetur adipiscing elit Lorem
		ipsum dolor sit amet, consectetur adipiscing elit Lorem dolor sit amet, consectetur
		 adipiscing elit
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CollapsiblePanel should render themed without textual content 1`] = `
<div
  className="panel panel-default theme-tc-collapsible-panel theme-default-panel panel panel-default"
>
  <div
    className="panel-heading"
  >
    <div
      className="panel-title"
    >
      <div
        className="theme-panel-header-content panel-header-content"
      >
        <button
          className="theme-panel-title btn btn-link"
          disabled={false}
          onClick={[MockFunction]}
          type="button"
        >
          <div
            className="theme-panel-title"
          >
            <div
              className="theme-group theme-col-2"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                Version 1 Version 1
              </div>
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                (Read Only)
              </div>
            </div>
            <div
              className="theme-undefined theme-col-2"
            >
              <div
                aria-describedby="42"
                className="theme-undefined"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyPress={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                03/02/2017 14:44:55
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
  >
    <div
      className="panel-body"
    />
  </div>
</div>
`;
